# acacia

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  foundry.rs  lib.rs  main.rs  output.rs
src/analysis/: branch.rs  classifier.rs  mod.rs
src/parser/: mod.rs  resolver.rs  solar.rs
src/tree/: builder.rs  labeler.rs  mod.rs
testdata/: AllFunctions.sol  FunctionOverloading.sol  IfRevert.sol  LibraryCalls.sol  MultipleRequires.sol  NativeCalls.sol  SafeERC20Calls.sol  SimpleRequire.sol  StorageCondition.sol  WithLoop.sol  WithModifier.sol
testdata/inheritance/: ChildContract.sol  Ownable.sol
tests/: external_calls_test.rs  integration_tests.rs
tests/common/: mod.rs
